<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu -->
    <item
        android:id="@+id/share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/baseline_arrow_upward_24"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/name"
        android:title="@string/name"
        app:showAsAction="never" />

    <item
        android:id="@+id/size"
        android:title="@string/size"
        app:showAsAction="never" />

    <item
        android:id="@+id/date"
        android:title="@string/date"
        app:showAsAction="never" />

    <item
        android:id="@+id/extension"
        android:title="@string/extension"
        app:showAsAction="never" />

</menu>